--- a/index.html
+++ b/index.html
@@ -3,56 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stark Interface v1.0</title>
+    <title>Dooron Dooron Lyrics</title>
     <style>
+        /* General styling for the page */
         body {
-            background-color: #0a0a0a;
-            color: #00d4ff;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
+            background: radial-gradient(circle at center, #2b32b2, #1488cc); /* Deep blue gradient */
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            color: white;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
+            min-height: 100vh;
+            margin: 0;
         }
-        header {
-            padding: 2rem;
-            text-shadow: 0 0 10px #00d4ff;
-            border-bottom: 1px solid #00d4ff;
-            width: 100%;
+
+        /* The card holding the lyrics */
+        .lyrics-card {
+            background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black */
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            max-width: 500px;
             text-align: center;
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
-        .container {
-            padding: 20px;
-            max-width: 800px;
+
+        /* Title and Artist styling */
+        h1 {
+            margin: 0 0 10px 0;
+            font-size: 2.2em;
+            letter-spacing: 2px;
+            color: #ffeb3b; /* Yellow accent */
         }
-        .status-box {
-            border: 1px solid #00d4ff;
+        
+        h3 {
+            margin: 0 0 30px 0;
+            font-weight: 300;
+            color: #ddd;
+            font-size: 1.2em;
+        }
+
+        /* Lyrics text styling */
+        p {
+            line-height: 1.8;
+            margin-bottom: 25px;
+            font-size: 1.1em;
+        }
+
+        /* Highlight the verse you specifically asked for */
+        .highlight-verse {
+            color: #fff;
+            font-weight: 500;
+            background: rgba(255, 255, 255, 0.1);
             padding: 15px;
-            margin-top: 20px;
-            background: rgba(0, 212, 255, 0.1);
+            border-radius: 10px;
+            border-left: 4px solid #ffeb3b;
+        }
+
+        /* Footer styling */
+        .footer {
+            font-size: 0.8em;
+            color: #aaa;
+            margin-top: 30px;
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <h1>SYSTEM INTERFACE: ONLINE</h1>
-    </header>
+    <div class="lyrics-card">
+        <h1>Dooron Dooron</h1>
+        <h3>Paresh Pahuja</h3>
 
-    <div class="container">
-        <section class="status-box">
-            <h3>Project: Deadpool Concept Art</h3>
-            <p>Status: Awaiting input parameters...</p>
-        </section>
+        <div class="lyrics-content">
+            <p>
+                Dooron dooron main vekhaan tenu, soneyo<br>
+                Kahaan tu, kahaan main<br>
+                Dooron dooron main vekhaan tenu, soneyo<br>
+                Kahaan tu, kahaan main
+            </p>
 
-        <article>
-            <h2>Current Missions</h2>
-            <ul>
-                <li>Integrate audio protocols</li>
-                <li>Refine UI aesthetics</li>
-                <li>Optimize performance</li>
-            </ul>
-        </article>
+            <p>
+                Ki main karaan ke main aavan nazar tenu<br>
+                Laayak tere kinven honwaan tu das mainu
+            </p>
+
+            <p>
+                Kol tere mainu aan de soni<br>
+                Karaan main kitne jatan, o soni<br>
+                Dooron dooron main vekhaan tenu, soneyo<br>
+                Kahaan tu, kahaan main
+            </p>
+
+            <div class="highlight-verse">
+                Sochoon ke milni te bolaanga ki<br>
+                Teri taan gallaan v'ch shaayari<br>
+                Sochoon ke milni te bolaanga ki<br>
+                Teri taan gallaan v'ch shaayari<br>
+                <br>
+                Vekhegi mainu te sochegi kya tu<br>
+                Mitti da banda main, tu taan pari
+            </div>
+
+            <p>
+                Ishqe di galiyon ch khoya e dil ve<br>
+                Aas lagaaye ke jaaye tu mil ve
+            </p>
+
+            <p>
+                Kol tere mainu aan de soni<br>
+                Karaan main kitne jatan, o soni<br>
+                Dooron dooron main vekhaan tenu, soneyo<br>
+                Kahaan tu, kahaan main
+            </p>
+        </div>
+
+        <div class="footer">
+            Lyrics &copy; Shiv Tandan | Singer: Paresh Pahuja
+        </div>
     </div>
 
 </body>
