--- a/index.html
+++ b/index.html
@@ -3,78 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dooron Dooron Lyrics</title>
+    <title>Dooron Dooron - Paresh Pahuja</title>
     <style>
-        /* General styling for the page */
+        /* General Page Styling */
         body {
-            background: radial-gradient(circle at center, #2b32b2, #1488cc); /* Deep blue gradient */
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); /* Deep teal/night gradient */
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
             color: white;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             margin: 0;
+            padding: 20px;
         }
 
-        /* The card holding the lyrics */
-        .lyrics-card {
-            background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black */
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-            max-width: 500px;
+        /* Main Card Container */
+        .music-card {
+            background: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(10px);
+            width: 100%;
+            max-width: 450px;
+            border-radius: 20px;
+            overflow: hidden;
+            box-shadow: 0 15px 35px rgba(0,0,0,0.6);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             text-align: center;
-            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
-        /* Title and Artist styling */
+        /* Video/Player Container */
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
+            overflow: hidden;
+            background: #000;
+        }
+
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+
+        /* Header Info */
+        .header {
+            padding: 20px;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
+        }
+
         h1 {
-            margin: 0 0 10px 0;
-            font-size: 2.2em;
-            letter-spacing: 2px;
-            color: #ffeb3b; /* Yellow accent */
+            margin: 0;
+            font-size: 1.8em;
+            color: #ffda79; /* Soft Gold */
+            letter-spacing: 1px;
         }
-        
-        h3 {
-            margin: 0 0 30px 0;
+
+        h2 {
+            margin: 5px 0 0;
+            font-size: 1em;
+            color: #aaa;
             font-weight: 300;
-            color: #ddd;
-            font-size: 1.2em;
         }
 
-        /* Lyrics text styling */
+        /* Lyrics Scroll Area */
+        .lyrics-scroll {
+            height: 350px;
+            overflow-y: auto;
+            padding: 20px 30px;
+            scrollbar-width: thin;
+            scrollbar-color: #ffda79 rgba(255,255,255,0.1);
+        }
+
+        /* Custom Scrollbar for Webkit (Chrome/Safari) */
+        .lyrics-scroll::-webkit-scrollbar {
+            width: 6px;
+        }
+        .lyrics-scroll::-webkit-scrollbar-thumb {
+            background-color: #ffda79;
+            border-radius: 10px;
+        }
+        .lyrics-scroll::-webkit-scrollbar-track {
+            background: rgba(255,255,255,0.05);
+        }
+
         p {
-            line-height: 1.8;
-            margin-bottom: 25px;
-            font-size: 1.1em;
+            line-height: 1.6;
+            margin-bottom: 20px;
+            font-size: 1em;
+            color: #e0e0e0;
         }
 
-        /* Highlight the verse you specifically asked for */
+        /* Highlighted Verse Styling */
         .highlight-verse {
+            background: linear-gradient(90deg, rgba(255, 218, 121, 0.1), rgba(0, 0, 0, 0));
+            border-left: 3px solid #ffda79;
+            padding: 15px;
+            text-align: left;
+            margin: 20px 0;
             color: #fff;
             font-weight: 500;
-            background: rgba(255, 255, 255, 0.1);
-            padding: 15px;
-            border-radius: 10px;
-            border-left: 4px solid #ffeb3b;
+            border-radius: 0 10px 10px 0;
         }
 
-        /* Footer styling */
+        /* Footer */
         .footer {
+            padding: 15px;
             font-size: 0.8em;
-            color: #aaa;
-            margin-top: 30px;
+            color: #666;
+            background: rgba(0,0,0,0.3);
         }
+
     </style>
 </head>
 <body>
 
-    <div class="lyrics-card">
-        <h1>Dooron Dooron</h1>
-        <h3>Paresh Pahuja</h3>
+    <div class="music-card">
+        
+        <div class="video-container">
+            <iframe 
+                src="https://www.youtube.com/embed/7xJAXSNY6dI?si=start=0" 
+                title="YouTube video player" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
+        </div>
 
-        <div class="lyrics-content">
+        <div class="header">
+            <h1>Dooron Dooron</h1>
+            <h2>Paresh Pahuja</h2>
+        </div>
+
+        <div class="lyrics-scroll">
             <p>
                 Dooron dooron main vekhaan tenu, soneyo<br>
                 Kahaan tu, kahaan main<br>
@@ -118,7 +181,7 @@
         </div>
 
         <div class="footer">
-            Lyrics &copy; Shiv Tandan | Singer: Paresh Pahuja
+            © Music by Paresh Pahuja | Lyrics by Shiv Tandan
         </div>
     </div>
 
